# Mono-Odometry

./: .gitignore  README.md
catkin_ws/src/dataset_collection/: CMakeLists.txt  package.xml
catkin_ws/src/dataset_collection/config/: head_camera.yaml
catkin_ws/src/dataset_collection/launch/: camera_calibration.launch  collect_dataset.launch  extract_bag.launch
code/: main.m
code/config/: configFile.m  paramsIndoor.m  paramsKITTI.m  paramsMalaga.m  paramsParking.m
code/functions/: bootstrap.m  processFrame.m
code/functions/8point_EssentialMatrix/: disambiguateRelativePose.m  estimateEssentialMatrix.m  fundamentalEightPoint.m
code/functions/bootstrap/: bootstrap.m
code/functions/bootstrap/8point_EssentialMatrix/: UnHomogCoords.m  decomposeEssentialMatrix.m  disambiguateRelativePose.m  estimateEssentialMatrix.m  fundamentalEightPoint.m  fundamentalEightPointNormalized.m  fundamentalEightPoint_normalized.m  normalise2dpts.m
code/functions/harris/: computeHarrisFeatures.m  computeHarrisScores.m  describeKeypoints.m  matchDescriptors.m  selectKeypoints.m
code/functions/plotting/: arrow3d.m  plotOverview.m
code/functions/poseEstimation/: cameraPoseEstimation.m  disambiguateP3P.m  distortPoints.m  homogMatrix2twist.m  nonlinearOptimization.m  nonlinearRefinement.m  projectPoints.m  reprojectionError.m
code/functions/processing/: cameraPoseEstimation.m  processFrame.m
code/functions/triangulation/: linearTriangulation.m  nonMaxSuppression.m
code/functions/utils/: plotCoordinateFrame.m  plotFeatures.m  plotMatches.m  plotOverview.m
(+9 files in other folders)
